--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,15 @@
 <%= render 'layouts/header' %>
 
 <div class="container">
-	
+
+	<% flash.each do |msg_type, message| %>
+		<div class="alert alert-<%= msg_type %> text-center"><%= message %>
+		</div>
+	<% end %>
+
 	<%= yield %>
 	<%= render 'layouts/footer' %>
+	<%= debug(params) if Rails.env.development? %>
 
 </div>
 </body>
