--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,15 @@
 <% provide(:title, 'Sign up') %>
 <h1 class="text-center">Sign up</h1>
-<p>
-  This will be a signup page for new users!
-</p>
+<div class="row">
+	<div class="col-md-6 col-md-offset-3">
+		<%= simple_form_for @user, defaults: { input_html: { class: "form-control" } } do |f| %>
+      		<%= f.error_notification %>
+      		<%= f.input :name, label: false, placeholder: "Username" %>
+      		<%= f.input :email, label: false, placeholder: "Email" %>
+      		<%= f.input :password, label: false, placeholder: "Password" %>
+      		<%= f.input :password_confirmation, label: false, placeholder: "Password Confirmation" %>
+
+      		<%= f.button :submit, "Create my account", class: "btn btn-block btn-primary" %>
+		<% end %>
+	</div>
+</div>
