--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,9 @@
 
 <div class="container">
 
-	<% flash.each do |msg_type, message| %>
-		<div class="alert alert-<%= msg_type %> text-center"><%= message %>
-		</div>
-	<% end %>
+    <% flash.each do |message_type, message| %>
+      <%= content_tag(:div, message, class: "alert alert-#{message_type}") %>
+    <% end %>
 
 	<%= yield %>
 	<%= render 'layouts/footer' %>
